--- a/CriminalIntent/res/layout-land/fragment_crime.xml
+++ b/CriminalIntent/res/layout-land/fragment_crime.xml
@@ -101,6 +101,13 @@
 	            android:text="@string/crime_suspect_text" />
 	        
 	        <Button
+	            android:id="@+id/crime_phoneNumberButton"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:text="@string/crime_call_text" />
+	        
+	        <Button
 	            android:id="@+id/crime_reportButton"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
